2016-07-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.11
        *: Tidied up lots of files.
        * BUGS:
            - Updated #6 to match current versions of Anonymine.
            - Tidied
            - Removed #0
        * configure.py:  Wrote missing doc-strings.
    0.2.10
        * anonymine_engine.py (init_field2):
            - Use SIGTERM to kill children if SIGCONT is unavailable.
            - Allow fork() to fail.
            - Use signal.alarm() in a more elegant way.
            - Add 64 bits of entropy to the tempfiles, just in case
              open(file, 'wx') fails to do its trick.

2016-07-14      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.9
        * INSTALL: Updated
        * enginecfg.default: Added the hiscores key.
        * cygwin-sshd:
            - Added "Things that will be done:" to avoid confusion.
            - exit 0 instead of fatal if the user aborts.
        * Makefile.static:
            - Added DESTDIR to HISCORE_FILE
            - install-dirs now installs CFG_DIR and $(DESTDIR)$(vargamesdir)
    0.2.8
        * configure.py: New functions: find_sysconfdir and find_vargamesdir.
        * anonymine.py, configure.py, Makefile.static: Place configuration
            files in $(sysconfdir)/anonymine
        * Makefile.static: enginecfg calibration message updated.
        * mkenginecfg, Makefile.static: Install highscore file.
        * mkenginecfg: time and pprint modules are no longer needed.
        * mkenginecfg: Write out the configuration file manually.
    0.2.7
        * anonymine_engine.py anonymine.py: Python 3 fixes:
            - anonymine_engine.hiscores.display.format_deltatime formatted
              the ms part as gibberish. [Fixed]
            - anonymine.play_game, anonymine.highscores_add_entry did not
              flush. [Fixed]
        * anonymine_engine.py (hiscores (display)): "/\T" -> "/\T time"
    0.2.6
        * anonymine.py: New functions highscores_display and